SWAGGER: Adding auth endpoints documentation.
